# permit-vector

./: pyproject.toml
nbs/: 240415_otel.ipynb  240415_search_and_retrieval.ipynb  240418_go_test.ipynb  240419_llama_3_testrun.ipynb  240419_text_to_sql.ipynb  240428_scratch.ipynb  test-server.go
