[tool.poetry]
name = "permit-vector"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
openai = "^1.17.1"
llama-index = "^0.10.29"
ipykernel = "^6.29.4"
arize-phoenix = {extras = ["evals"], version = "^3.21.0"}
nest-asyncio = "^1.6.0"
protobuf = "3.20"
openinference-instrumentation-llama-index = "^1.2.1"
llama-index-callbacks-arize-phoenix = "^0.1.4"
llama-index-llms-openai = "^0.1.15"
opentelemetry-sdk = "^1.24.0"
opentelemetry-api = "^1.24.0"
ipywidgets = "^8.1.2"
datasets = "^2.14.6"
dspy-ai = "^2.4.5"
opentelemetry-exporter-otlp = "^1.24.0"
openinference-instrumentation-dspy = "^0.1.6"
tqdm = "^4.66.2"
requests = "^2.31.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
chromadb = "^0.4.24"
pyzmq = "26.0.0"
ollama = "^0.1.8"


[tool.poetry.group.dev.dependencies]
flask = "^3.0.3"
opentelemetry-instrumentation-flask = "^0.45b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
